figue/tests/integration/snapshots/main__integration__err__error_missing_value_for_argument.snap
---
source: tests/integration/err.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: flag --concurrency requires a value
   ╭─[ <cli>:1:1 ]
   │
 1 │ --concurrency
   │ ──────┬──────  
   │       ╰──────── flag --concurrency requires a value
───╯
